# meu-gerador-nestjs

./: README.md  gerador.py  meu_prompt.txt  pyproject.toml
.github/workflows/: gerar.yml
