[tool.poetry]
name = "gerador-ia"
version = "0.1.0"
description = "Gerador automático de código NestJS"
authors = ["Seu Nome"]
package-mode = false  # <--- ESTA LINHA CORRIGE O ERRO

[tool.poetry.dependencies]
python = "^3.11"
google-generativeai = "^0.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
