[project]
name = "meu-gerador-nestjs"
version = "0.1.0"
description = ""
authors = [
    {name = "erimendes",email = "eri.mendes32@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-generativeai (>=0.8.6,<0.9.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
